--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Yo</h1>
     </div>
 
-    <script type="module" src="app.js"></script>
+    <script type="module" src="./src/app.js"></script>
 
 </body>
 
